--- a/Recorder_APP/app/build.gradle
+++ b/Recorder_APP/app/build.gradle
@@ -26,6 +26,8 @@ dependencies {
     compile 'com.android.support:support-v4:23.3.0'
     compile 'com.android.support:design:23.3.0'
     compile 'com.umeng.analytics:analytics:latest.integration'
-    compile 'com.android.support:recyclerview-v7:23.1.1'
+    compile 'com.android.support:recyclerview-v7:23.3.0'
     compile 'com.loopj.android:android-async-http:1.4.9'
+    compile 'me.imid.swipebacklayout.lib:library:1.0.0'
+    compile 'com.github.sundeepk:compact-calendar-view:1.8.4'
 }
