--- a/Recorder_APP/app/src/main/AndroidManifest.xml
+++ b/Recorder_APP/app/src/main/AndroidManifest.xml
@@ -12,12 +12,15 @@
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
 
     <application
+        android:name=".Application.MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Activity.MainActivity">
+
+        android:theme="@style/AppThemeMain">
+        <activity android:name=".Activity.MainActivity"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -30,10 +33,10 @@
         <activity
             android:name=".Activity.LoginActivity"
             android:label="@string/title_activity_login"
-        android:parentActivityName=".Activity.MainActivity">
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value="com.tongji.android.recorder_app.Activity.MainActivity" />
+            android:parentActivityName=".Activity.MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.tongji.android.recorder_app.Activity.MainActivity" />
         </activity>
 
         <meta-data
@@ -50,6 +53,24 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.tongji.android.recorder_app.Activity.MainActivity" />
+        </activity>
+        <activity
+            android:name=".Activity.ItemListActivity"
+            android:label="@string/title_item_list"
+            android:parentActivityName=".Activity.MainActivity"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.tongji.android.recorder_app.Activity.MainActivity" />
+        </activity>
+        <activity
+            android:name=".Activity.ItemDetailActivity"
+            android:label="@string/title_item_detail"
+            android:parentActivityName=".Activity.ItemListActivity"
+            android:theme="@style/AppTheme">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.tongji.android.recorder_app.Activity.ItemListActivity" />
         </activity>
     </application>
 
