--- a/Recorder_APP/app/build.gradle
+++ b/Recorder_APP/app/build.gradle
@@ -35,4 +35,5 @@ dependencies {
 //    compile 'com.esotericsoftware.kryo:kryo:2.24.0'
 //    compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.colintmiller:simplenosql:0.5.1'
+    compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
 }
