--- a/Recorder_APP/app/src/main/AndroidManifest.xml
+++ b/Recorder_APP/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <application
         android:name=".Application.MyApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/logo"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppThemeMain">
