--- a/Recorder_APP/app/build.gradle
+++ b/Recorder_APP/app/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile 'com.android.support:design:23.3.0'
     compile 'com.umeng.analytics:analytics:latest.integration'
     compile 'com.android.support:recyclerview-v7:23.3.0'
+    compile 'com.bignerdranch.android:expandablerecyclerview:1.0.3'
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'me.imid.swipebacklayout.lib:library:1.0.0'
     compile 'com.github.sundeepk:compact-calendar-view:1.8.4'
