--- a/Recorder_APP/app/src/main/AndroidManifest.xml
+++ b/Recorder_APP/app/src/main/AndroidManifest.xml
@@ -31,7 +31,11 @@
         <activity android:name=".Login" />
         <activity android:name=".Signup" />
         <activity android:name=".Rankinglist" />
-        <receiver android:name=".Service.AlarmReceiver" android:process=":remote"/>
+
+        <receiver
+            android:name=".Service.AlarmReceiver"
+            android:enabled="true" />
+
         <activity
             android:name=".Activity.LoginActivity"
             android:label="@string/title_activity_login"
@@ -82,6 +86,27 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Activity.LoginActivity" />
         </activity>
+
+        <receiver
+            android:name=".Service.WidgetProvider">
+            <meta-data android:name="android.appwidget.provider"
+                android:resource="@xml/mywidget_provider"
+                />
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+
+                <!-- GridWidgetProvider接收点击gridview的响应事件 -->
+                <action android:name="recorder.COLLECTION_VIEW_ACTION" />
+                <!-- GridWidgetProvider接收点击bt_refresh的响应事件 -->
+                <action android:name="recorder.BT_REFRESH_ACTION" />
+            </intent-filter>
+        </receiver>
+
+
+        <service
+            android:name=".Service.MyAppWidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+
     </application>
 
 </manifest>
