--- a/Recorder_APP/app/build.gradle
+++ b/Recorder_APP/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     //    compile 'org.greenrobot:eventbus:3.0.0'
     compile 'com.colintmiller:simplenosql:0.5.1'
     compile 'com.wdullaer:materialdatetimepicker:2.3.0'
+    compile 'com.bignerdranch.android:expandablerecyclerview:2.1.1'
     //compile 'com.github.dmytrodanylyk.circular-progress-button:library:1.1.3'
     //compile 'com.github.dmytrodanylyk:android-morphing-button:98a4986e56'
     compile project(':library')
